force-app/main/default/objects/SeasonUserStat__c/SeasonUserStat__c.object-meta.xml
<CustomObject>
    <label>Season User Statistics</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>AutoNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SeasonUserStats</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>