force-app/main/default/objects/SeasonUserStat__c/fields/TotalAchievementsReached__c.field-meta.xml
<CustomField>
    <fullName>TotalAchievementsReached__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Achievements Reached</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>