force-app/main/default/objects/SeasonUserStat__c/fields/TotalScore__c.field-meta.xml
<CustomField>
    <fullName>TotalScore__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>